<resources>
    <string name="app_name">Shoe Store App</string>
    <string name="Empty">No Item To Show</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="you_have_button_to_add_new_item">You have + button to add new item</string>
    <string name="next">Next</string>
    <string name="instruction_you_will_need">instruction you will need</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="signup">SignUp</string>
    <string name="don_t_have_account">Don\'t have account:</string>
    <string name="welcome_in_shoe_app">Welcome in Shoe App</string>
    <string name="let_s_start_and_know_what_you_want_to_but">Let\'s start and know what you want to buy</string>
    <string name="log_out">Log out</string>
    <string name="add">+</string>
    <string name="description">Description</string>
    <string name="size">Size</string>
    <string name="company">Company</string>
    <string name="name">Name</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>

    <string name="mutable_description">Description : %s </string>
    <string name="mutable_size">Size : %s </string>
    <string name="mutable_company">Company : %s </string>
    <string name="mutable_name">Name : %s </string>

</resources>